2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* goops.c:  Include validate.h.

	(DEFVAR, scm_add_method):  Don't use deprecated scm_eval2.

	(scm_sys_fast_slot_ref, scm_sys_fast_slot_set_x,
	scm_m_atdispatch):  Provide FUNC_NAME definition.  Don't use
	deprecated SCM_OUTOFRANGE macro.

	(scm_sloppy_num2ulong, scm_sys_logand):  Removed.  Guile's logand
	function now provides the desired behaviour.

	* goops.c (filter_cpl, remove_duplicate_slots), goops.h
	(SCM_SUBCLASSP):  Don't use deprecated scm_sloppy_memq.

2000-11-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.h (SCM_LENGTH_MAX):  Deprecated.

	* unif.c (scm_make_uve):  Use SCM_BITVECTOR_MAX_LENGTH and
	SCM_UVECTOR_MAX_LENGTH instead of SCM_LENGTH_MAX.  Postpone length
	checks for strings and vectors to their constructors.  Eliminate
	redundant SCM_IMP test.

	(scm_dimensions_to_uniform_array):  Postpone length checks to
	scm_make_uve.

	* unif.h (SCM_BITVECTOR_MAX_LENGTH, SCM_UVECTOR_MAX_LENGTH):
	Added.

2000-11-23  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gh_data.c (makvect), numbers.c (scm_mkbig, scm_adjbig),
	strings.c (scm_makstr, scm_take_str), symbols.c
	(scm_intern_obarray_soft, scm_sysintern0_no_module_lookup), unif.c
	(scm_make_uve), vectors.c (scm_make_vector): Use appropriate
	SCM_SET_<type>_(CHARS|BASE) macro instead of SCM_SETCHARS.

	* numbers.h (SCM_SET_BIGNUM_BASE), strings.h
	(SCM_SET_STRING_CHARS), symbols.h (SCM_SET_SYMBOL_CHARS), unif.h
	(SCM_SET_UVECTOR_BASE, SCM_SET_BITVECTOR_BASE), vectors.h
	(SCM_SET_VECTOR_BASE):  Added.

	* symbols.c (SCM_SETCHARS):  Deprecated.

2000-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_gc_sweep), unif.c (scm_make_uve):  Don't allocate or
	free memory for empty bitvectors.

	* gh_data.c (makvect), strings.c (scm_makstr, scm_take_str),
	symbols.c (scm_intern_obarray_soft,
	scm_sysintern0_no_module_lookup), unif.c (scm_make_uve):  Use
	appropriate SCM_SET_<type>_LENGTH macro instead of SCM_SETLENGTH.
